portfolio and  home component changes

--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,7 @@
     <div id="skipnav"><a href="#maincontent">Skip to main content</a></div>
 
     <pm-app></pm-app>
+    <!--<outlet-app></outlet-app>-->
     <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
     <div class="scroll-top page-scroll hidden-sm hidden-xs hidden-lg hidden-md">
         <a class="btn btn-primary" href="#page-top">
